# MagicCat

./: .editorconfig  .gitignore  CMakeLists.txt  DxeSolution.sln  MagicCat.sln  README.md  README.txt  build_tests.bat
MagicCat/: CMakeLists.txt  MagicCat.cpp  MagicCat.vcxproj  Resource.h  ResourceConstantHedder.h  app_build_setting.h  particle.ptcl
MagicCat/program/: DrawStringUtils.h  EventBus.ixx  RandomUtils.h  RenderUtils.h  gm_main.cpp  gm_main.h
MagicCat/program/Asset/: AssetService.cpp  AssetService.ixx
MagicCat/program/Audio/: AudioService.cpp  AudioService.ixx
MagicCat/program/Battle/: BattleService.cpp  BattleService.ixx
MagicCat/program/Card/: CardService.cpp  CardService.ixx
MagicCat/program/Character/: Character.ixx  CharacterService.cpp  CharacterService.ixx
MagicCat/program/Character/Enemy/: Enemy.ixx  EnemyService.cpp  EnemyService.ixx
MagicCat/program/Character/Enmey/: Enemy.ixx  EnemyService.cpp  EnemyService.ixx
MagicCat/program/Character/Health/: HealthComponent.cpp  HealthComponent.ixx  IDamagable.ixx  IDamageable.ixx
MagicCat/program/Character/Player/: Player.ixx
MagicCat/program/Charactor/Health/: HealthComponent.cpp
MagicCat/program/Component/Health/: HealthComponent.cpp  HealthComponent.ixx
MagicCat/program/Config/: ConfigService.cpp  ConfigService.ixx
MagicCat/program/Controller/: CombatController.cpp  CombatController.ixx
MagicCat/program/Core/: GameService.cpp  GameService.ixx
MagicCat/program/Core/Asset/: AssetService.cpp  AssetService.ixx  FilePaths.h
MagicCat/program/Core/Card/: CardService.cpp  CardService.ixx
MagicCat/program/Core/Character/: Character.ixx  CharacterService.cpp  CharacterService.ixx
MagicCat/program/Core/Input/: InputService.cpp  InputService.ixx
MagicCat/program/Core/Main/: EventBus.ixx  GameService.cpp  GameService.ixx  ServiceLocator.ixx
MagicCat/program/Input/: InputService.cpp  InputService.ixx
MagicCat/program/Main/: EventBus.ixx  GameService.cpp  GameService.ixx  ServiceLocator.ixx
MagicCat/program/Render/: RenderService.cpp  RenderService.ixx
MagicCat/program/Scene/: CardView.cpp  CardView.ixx  CharacterView.ixx  CombatScene.cpp  ControlView.ixx  DataView.cpp  DataView.ixx  SceneService.cpp  SceneService.ixx  SpriteView.ixx  StartScene.cpp
MagicCat/program/Scene/Animation/: AnimationFactory.ixx  AnimationManager.cpp  AnimationManager.ixx  AttackAnimation.cpp  DamageTextAnimation.cpp  DamageTextAnimation.ixx  FadeAnimation.cpp  FadeAnimation.ixx  SpriteAnimation.cpp  TextAnimation.cpp
MagicCat/program/UI/: CombatUi.cpp  StartUi.cpp  UiManager.cpp  UiService.cpp  UiService.ixx
MagicCat/program/UI/Animation/: AnimationService.cpp  AnimationService.ixx
MagicCat/program/View/: ViewEnumMapper.ixx
MagicCat/program/View/Animation/: AnimationFactory.ixx  SpriteAnimation.cpp  TextAnimation.cpp
MagicCat/program/View/Displayer/: AttackDisplayer.cpp  AttackDisplayer.ixx  CardDisplayer.cpp  CardDisplayer.ixx  CharacterDisplayer.cpp  CharacterDisplayer.ixx  ControlDisplayer.cpp  ControlDisplayer.ixx  CutsceneFocusDisplayer.ixx  DialogDisplayer.ixx  Displayer.ixx  DisplayerBase.ixx  SpriteDisplayer.ixx
MagicCat/program/View/Effector/: EffectorFactory.ixx  FadeEffector.cpp  HitFlashEffector.cpp
MagicCat/program/View/Scene/: CombatScene.cpp  CutsceneScene.cpp  InfoScene.cpp  RulesScene.cpp  SceneService.cpp  SceneService.ixx  StartScene.cpp
MagicCat/resource/csv/: example.csv
MagicCat/resource/json/: card_config.json  enemy_config.json  example.json
MagicCat/resource/text/: sample_text2.txt
common/: CMakeLists.txt
common/dxe/: OBJLoader.cpp  OBJLoader.h  dxe.cpp  dxe.h  dxe_build_setting.h  dxe_camera.cpp  dxe_camera.h  dxe_data.cpp  dxe_font_text.cpp  dxe_font_text.h  dxe_graphics_layer.cpp  dxe_graphics_layer.h  dxe_input.cpp  dxe_input.h  dxe_prototype.h  dxe_render_param.h  dxe_sprite.cpp  dxe_sprite.h  dxe_texture.cpp  dxe_texture.h
common/dxe/effects/: dxe_erea_projection.cpp  dxe_particle.cpp  dxe_particle.h  dxe_particle_sub.cpp  dxe_shadow_map.cpp  dxe_water_plane.cpp  dxe_water_plane.h  dxe_water_plane_sub.cpp
common/dxe/gui/: dxe_gui_check_box.cpp  dxe_gui_check_box.h  dxe_gui_drag_box.cpp  dxe_gui_drag_box.h  dxe_gui_input_box.cpp  dxe_gui_input_box.h  dxe_gui_menu_selector.cpp  dxe_gui_menu_selector.h  dxe_gui_value_slider.h
common/dxe/mesh/: dxe_inst_mesh.cpp  dxe_inst_mesh.h  dxe_mesh.cpp  dxe_mesh.h  dxe_mesh_base.cpp  dxe_mesh_base.h  dxe_mesh_desc.h  dxe_mesh_mtrl_gui_controller.cpp
common/dxe/mesh/generate_mesh/: dxe_mesh_barrel.cpp  dxe_mesh_box.cpp  dxe_mesh_cone.cpp  dxe_mesh_cone_cylinder.cpp  dxe_mesh_cube.cpp  dxe_mesh_cylinder.cpp  dxe_mesh_disk.cpp  dxe_mesh_disk_ring.cpp  dxe_mesh_dome.cpp  dxe_mesh_from_height_map.cpp  dxe_mesh_half_barrel.cpp  dxe_mesh_hollow_out_disk_plane.cpp  dxe_mesh_obj.cpp  dxe_mesh_plane.cpp  dxe_mesh_sphere.cpp  dxe_mesh_static_group.cpp  dxe_mesh_torus.cpp  dxe_mesh_triangle_equilateral.cpp  (+2 more)
common/tnl/: tnl_coroutine.h  tnl_csv.h  tnl_folder_tree.h  tnl_hierarchy_tree.h  tnl_input.cpp  tnl_input.h  tnl_interactor.h  tnl_intersect.cpp  tnl_intersect.h  tnl_link_linear.h  tnl_math.cpp  tnl_math.h  tnl_matrix.h  tnl_seek_unit.cpp  tnl_seek_unit.h  tnl_shared_factory.h  tnl_state_machine.cpp  tnl_state_machine.h  tnl_task_scheduler.cpp  tnl_task_scheduler.h  tnl_using.h  tnl_util.cpp  tnl_util.h  tnl_vector.h  tnl_vector2f.h  tnl_vector2i.h  tnl_vector3.cpp  tnl_vector3.h
tests/: CMakeLists.txt  MockServices.h  test_AssetService.cpp  test_AudioService.cpp  test_BattleSequenceService.cpp  test_BattleSequenceServiceProperties.cpp  test_BattleService.cpp  test_BattleServiceCodeQualityProperties.cpp  test_BattleServiceParseSpriteProperty.cpp  test_BattleServiceProperties.cpp  test_CardService.cpp  test_CardServiceUtils.cpp  test_Character.cpp  test_CombatIntegration.cpp  test_CombatScene.cpp  test_ConfigService.cpp  test_Enemy.cpp  test_EventBus.cpp  test_GameFlowIntegration.cpp  test_HealthComponent.cpp  test_Player.cpp  test_SceneService.cpp  test_SequentialBattlesIntegration.cpp  test_ViewEnumMapper.cpp
(+50 files in other folders)
